<resources>
    <string name="app_name">KaliEat</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="newUser">Not a Member yet?.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>


    <!--signup-->
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account?</string>

    <string name="sex">Sex</string>
    <string name="birthday">Birthday</string>
    <string name="title_activity_profile">Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="send_message">Send Message</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="title_activity_myprofile">Myprofile</string>
    <string name="error_player">err</string>
    <string name="title_activity_signup">Signup</string>


    <!--google -->


    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="title_activity_user_profile">profile</string>
    -->


</resources>
