<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"

    android:orientation="vertical"
    android:padding="15dp">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="skip"
        android:id="@+id/skip"
        android:background="#00000000"
        android:layout_gravity="right"/>
    <LinearLayout
        android:gravity="center"

        android:orientation="vertical"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
android:background="@drawable/logo"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:id="@+id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="#536dfe"
            android:textSize="19sp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/registered_emailid"
            android:textColor="#FF4081"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/registered_emailid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#333"
            android:textColorHint="#333"
            android:textSize="@dimen/textsize" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#cc9850" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:id="@+id/backToLoginBtn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#fff"
                android:background="#536dfe"

                android:text="Back" />

            <Button
                android:id="@+id/forgot_button"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="#536dfe"

                android:text="Submit"
                android:textColor="#fff" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>