
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"

        tools:context=".Login"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                android:weightSum="7">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="skip"
                    android:id="@+id/skip"
                    android:onClick="skip"
                    android:background="#00000000"
                    android:layout_gravity="right"/>
                <ImageView
                    android:background="@drawable/logo"
                    android:id="@+id/imageView2"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_above="@+id/login_layout"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center"
                    android:layout_weight="1"

                    android:gravity="center"
                    android:padding="10dp"
                    android:text="login"
                    android:textColor="#cc9850"
                    android:textSize="25sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="@string/app_name"
                    android:textColor="#536dfe"
                    android:textSize="19dp" />

                <EditText
                    android:id="@+id/login_emailid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#333"
                    android:textColorHint="#333"
                    android:textSize="@dimen/textsize" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="#cc9850" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/passowrd"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#333"
                    android:textColorHint="#333"
                    android:textSize="@dimen/textsize" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="#cc9850" />

                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:paddingTop="8dp">

                    <CheckBox
                        android:id="@+id/show_hide_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/show_pwd"
                        android:textColor="#333"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:padding="5dp"
                        android:text="@string/forgot"
                        android:textColor="#333"
                        android:onClick="forgotpassword"
                        android:textSize="14sp" />
                </LinearLayout>

                <Button

                    android:id="@+id/login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="#536dfe"
                    android:padding="3dp"
                    android:text="login"

                    android:textColor="#fff"
                    android:textSize="17sp"
                    android:textStyle="bold" />




                <LinearLayout
                    android:weightSum="2"
                    android:layout_gravity="center"
                    android:layout_width="270dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/login_layout"
                    android:layout_marginTop="13dp"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/creataaeAccount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/login_layout"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="@string/newUser"
                        android:textColor="#333"
                        android:textSize="15sp" />


                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/createAccount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignTop="@+id/createAccount"
                        android:layout_toEndOf="@+id/createAccount"
                        android:layout_toRightOf="@+id/createAccount"
                        android:padding="5dp"
                        android:text="Sign Up here"
                        android:textColor="#536dfe"
                        android:onClick="signup"
                        android:textSize="15sp" />
                </LinearLayout>
                <include layout="@layout/item_divider"></include>
                <!--<com.google.android.gms.common.SignInButton-->
                    <!--android:id="@+id/btn_sign_in"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->

                    <!--android:layout_marginBottom="20dp"/>-->

                <Button
                    android:id="@+id/btn_sign_out"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_logout_from_google"
                    android:visibility="gone"
                    android:layout_marginBottom="10dp"/>

                <Button
                    android:id="@+id/btn_revoke_access"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_revoke_access"
                    android:visibility="gone" />
                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="40dp"-->
                    <!--android:orientation="horizontal"-->
                    <!--android:weightSum="2">-->
                    <!--<Button-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:background="#536dfe"-->
                        <!--android:id="@+id/facebook"-->
                        <!--android:layout_weight="1"-->
                        <!--android:text="Facebook"-->
                        <!--android:textColor="#fff"-->
                        <!--android:layout_marginRight="1dp"-->
                        <!--android:layout_alignParentTop="true"-->
                        <!--android:layout_alignRight="@+id/imageView2"-->
                        <!--android:layout_alignEnd="@+id/imageView2" />-->
                    <!---->



                <!--</LinearLayout>-->
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llProfile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:weightSum="3"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imgProfilePic"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical"
                    android:layout_weight="2" >

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/txtEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textSize="18dp" />
                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>